--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-tinder-card": "^1.4.5",
+    "stream-chat": "^4.3.0",
+    "stream-chat-react": "^6.11.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
