--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "lowdb": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.4.2",
+    "react-native": "^0.66.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-tinder-card": "^1.4.5",
