--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "freshBONDS",
-  "homepage": "/",
+  "homepage": "https://monstercameron.github.io/northstar/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
